opam-version: "2.0"
version: "0.1.0"
synopsis: "A power monitoring tool"
maintainer: "Patrick Ferris <patrick@sirreg.org>"
authors: "Patrick Ferris <patrick@sirreg.org>"
license: "MIT"
homepage: "https://github.com/patricoferris/clarke"
bug-reports: "https://github.com/patricoferris/clarke/issues"
dev-repo: "git+https://github.com/patricoferris/clarke.git"
doc: "https://patricoferris.github.io/clarke/"
build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "dune"     {>= "2.0"}
  "eio_luv"  {>= "0.7"}
  "variorum"
  "ptime"
  "cmdliner"
  "http"
  "cohttp-eio"
  "tls-eio"
  "lwt_eio"
  "prometheus"
  "prometheus-app"
  "ISO3166"
  "carbon"
]
pin-depends: [
  [ "hwloc.dev" "git+https://github.com/patricoferris/ocaml-hwloc#3447dc5c40f0d868529aafcc84b5d2d971062b30" ]
  [ "jansson.dev" "git+https://github.com/patricoferris/ocaml-jansson#42cb429e722ec64807d75ae401758eb666c9d189" ]
  [ "variorum.dev" "git+https://github.com/patricoferris/ocaml-variorum#9128770e9df08ca7a90f317acc08b9cd49da6766" ]
  [ "carbon.dev" "git+https://github.com/geocaml/carbon-intensity#2d9e7b0376584fcf931f7847d32acfcde8a0b83c" ]
  [ "capnp-rpc" "git+https://github.com/talex5/capnp-rpc#c06e767b8a4ec5a87a07e62958cdb55d0d59c59d" ]
  [ "capnp-rpc-lwt" "git+https://github.com/talex5/capnp-rpc#c06e767b8a4ec5a87a07e62958cdb55d0d59c59d" ]
  [ "capnp-rpc-unix" "git+https://github.com/talex5/capnp-rpc#c06e767b8a4ec5a87a07e62958cdb55d0d59c59d" ]
]
