(rule
 (targets carbon_api.ml carbon_api.mli)
 (deps carbon_api.capnp)
 (action
  (run capnp compile -o %{bin:capnpc-ocaml} %{deps})))

(library
 (name clarke)
 (public_name clarke)
 (flags
  (:standard -w -53-55))
 (libraries
  eio_luv
  eio.unix
  ptime
  variorum
  ezjsonm
  prometheus
  carbon
  capnp
  capnp-rpc-lwt))
